Improved code readability, deleted duplicate files and corrected up button

--- a/css/style.css
+++ b/css/style.css
@@ -1,75 +1,264 @@
 * {
-  scroll-behavior: smooth;
+    scroll-behavior: smooth;
 }
 
 body {
-  background-color: #1c2128;
-  font-family: apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial,
-    sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
-  font-weight: 400;
+    background-color: #1C2128;
+    font-family: apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+    font-weight: 400;
 }
 
 /* Style for the Scrollbar */
 ::-webkit-scrollbar {
-  width: 16px;
-  border: 1px solid #424242;
+    width: 16px;
+    border: 1px solid #424242;
 }
 
 ::-webkit-scrollbar-track {
-  background: #424242;
+    background: #424242;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #686868;
-  border-inline: 2px solid #424242;
+    background: #686868;
+    border-inline: 2px solid #424242;
 }
 
 /* Style for the top header */
 header {
-  box-sizing: border-box;
-  display: flex;
-  padding: 0 20px;
-  align-items: center;
-  justify-content: center;
-  background-color: #2d333b;
-  border: 1px solid #444c56;
-  top: 0px;
-  left: 0px;
-  position: fixed;
-  width: 100%;
-  height: 64px;
+    box-sizing: border-box;
+    display: flex;
+    padding: 0 20px;
+    align-items: center;
+    justify-content: center;
+    background-color: #2D333B;
+    border: 1px solid #444C56;
+    z-index: 2;
+    top: 0px;
+    left: 0px;
+    position: fixed;
+    width: 100%;
+    height: 64px;
 }
 
 header .content a {
-  font-size: 2em;
-  color: #ffffff;
-  text-decoration: none solid rgba(205, 217, 229, 0.7);
-  margin-left: 12px;
+    font-size: 2em;
+    color: #FFFFFF;
+    text-decoration: none solid rgba(205, 217, 229, 0.7);
+    margin-left: 12px;
 }
 
+/* Style the side navigation bar */
+.sidenav {
+    height: 100%;
+    width: 17.5%;
+    position: fixed;
+    z-index: 1;
+    top: 64px;
+    left: 0px;
+    background-color: #22272E;
+    overflow-x: hidden;
+    padding-top: 20px;
+    border: 1px solid #444C56;
+    border-top: none;
+}
+
+.sidenav a {
+    font-size: 20px;
+    line-height: 28px;
+    color: #ADBAC7;
+    text-decoration: solid #ADBAC7;
+    display: block;
+    padding-left: 12px;
+    padding-top: 12px;
+}
+
+.sidenav a:hover {
+    color: #539BF5;
+    text-decoration: underline solid #539BF5;
+}
+
+.sidenav .active {
+    color: #1E5AA3;
+    text-decoration: underline solid #1E5AA3;
+}
+
+.sidenav .active:hover {
+    color: #539BF5;
+    text-decoration: underline solid #539BF5;
+    opacity: 2;
+}
+
+.sidenav .sub {
+    position: relative;
+    padding-left: 10%;
+    font-size: 18px;
+    line-height: 24px;
+}
+
+/* Style for Scroll-to-up Button */
+.arrow {
+    width: auto;
+    height: auto;
+    position: fixed;
+    bottom: 72px;
+    right: 40px;
+    z-index: 2;
+    background-color: #22272E;
+    border: 1px solid #444C56;
+}
+
+.arrow {
+    padding: 8px 12px;
+    background: #ADBAC7;
+    border-radius: 50%;
+    color: #1C2128;
+}
+
+.arrow:hover {
+    opacity: 0.8;
+}
+
+/* Style for the Main Content */
+.container {
+    position: relative;
+    margin-left: 25%;
+    margin-right: 10%;
+    margin-top: 72px;
+    padding-bottom: 32px;
+}
+
+.container hr {
+    border: 1px solid #444C56;
+}
+
+.container h1 {
+    font-size: 24px;
+    line-height: 36px;
+    position: relative;
+    /*margin-left: 10%;*/
+    color: #ADBAC7;
+}
+
+.container h2 {
+    font-size: 20px;
+    line-height: 30px;
+    position: relative;
+    color: #ADBAC7;
+}
+
+.container p {
+    font-size: 18px;
+    line-height: 30px;
+    margin-left: 0%;
+    color: #ADBAC7;
+    opacity: 0.8;
+    position: relative;
+}
+
+.container ol {
+    position: relative;
+    margin-left: 2%;
+}
+
+.container ol li {
+    font-size: 18px;
+    line-height: 42px;
+    color: #ADBAC7;
+}
+
+.container ol a {
+    font-size: 16px;
+    line-height: 32px;
+    color: #539BF5;
+    text-decoration: none;
+}
+
+.container .subcontainer {
+    position: relative;
+    margin-left: 2%;
+}
+
+/* Style change for tablets and small screen laptops*/
+@media (max-width: 1050px) {
+    .container {
+        margin-right: 7.5%;
+    }
+
+    .sidenav {
+        width: 22.5%;
+    }
+
+    .sidenav a {
+        padding-left: 6px;
+    }
+}
 
 /* Style change for mobile devices */
 @media (max-width: 750px) {
-  header {
-    height: auto;
-    padding: 0px;
-  }
+    header {
+        height: auto;
+        padding: 0px;
+    }
 
-  header .content a {
-    font-size: 1.5em;
-    margin-left: 6px;
-  }
+    header .content a {
+        font-size: 1.5em;
+        margin-left: 6px;
+    }
 
-  ::-webkit-scrollbar {
-    width: thin;
-  }
+    ::-webkit-scrollbar {
+        width: thin;
+    }
+
+    .sidenav {
+        width: 100%;
+        height: auto;
+        position: relative;
+        padding: 0, 0;
+        z-index: 0;
+        top: 57px;
+        padding-top: 0;
+        border-top: none;
+        margin-bottom: 12px;
+    }
+
+    .sidenav a {
+        padding-top: 4px;
+        padding-bottom: 4px;
+        margin-top: 0;
+        border-top: 1px solid #373E47;
+    }
+
+    .sidenav .sub {
+        padding-left: 32px;
+    }
+
+    .container {
+        z-index: 0;
+        position: relative;
+        margin-left: 2px;
+        margin-right: 4px;
+        width: auto;
+    }
+
+    .container h1 {
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    .container ol {
+        margin-left: 4px;
+    }
 }
 
-.container {
-  margin-top: 5%;
+
+/* Styling for buttons */
+.primary-btn {
+    padding: 10px 22px;
+    color: white !important;
+    background: rgb(88, 101, 242);
+    text-decoration: none !important;
 }
 
-.button-holder {
-  margin: 10px 0;
+.primary-btn:hover {
+    color: black !important;
 }
-
